--- a/myprj/users/templates/profile.html
+++ b/myprj/users/templates/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>List user</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -16,10 +16,11 @@
         <table class="table">
             <thead>
                 <tr>
-                  <th scope="col">#</th>
+                  <th scope="col">ID</th>
                   <th scope="col">username</th>
                   <th scope="col">password</th>
                   <th scope="col">option</th>
+
                 </tr>
               </thead>
             {% for x in users %}
@@ -28,7 +29,12 @@
                   <th scope="col">{{ x.id }}</th>
                   <th scope="col">{{ x.username }}</th>
                   <th scope="col">{{ x.password }}</th>
-                  <th scope="col"><a class="btn btn-outline-danger" href="del_record/{{x.id}}" role="button">Delete</a>
+                  <th scope="col">
+                    <div class="btn-group" role="group" aria-label="Basic outlined example" >
+                      <a class="btn btn-outline-primary" href="edit_record/{{x.id}}" role="button">Edit</a>
+                      <a class="btn btn-outline-danger" href="del_record/{{x.id}}" role="button">Delete</a>
+                    </div>
+                    <!-- <a class="btn btn-outline-danger" href="del_record/{{x.id}}" role="button">Delete</a> -->
                   </th>
                 </tr>
               </thead>
